--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -60,7 +60,7 @@
             <div class="col-md-12 header-text text-white">
                 <h1 class=" intro-text"><strong>Full Stack Software Developer</strong></h1>
                 <p class="lead intro-text mb-3 ">
-                    Bases of out the Greater Minneapolis-St. Paul Area. Specializing in custom Full Stack Web Development.
+                    Based out of the Greater Minneapolis-St. Paul Area. Specializing in custom Full Stack Web Development.
                     If you are interested in a better web presence or an employer looking to hire, Please feel free to connect with me.
                 </p>
                 <div class="mt-3">
