--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -130,7 +130,7 @@
 
         <div class="row mt-5">
             <div class="col-md-9" id="glozzom">
-                <img src="../img/glozzom.jpg" alt="" class="img-fluid">
+                <img src="../img/favr-port.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-3 mt-1">
                 <a target="_blank" href="https://www.askfavr.com/">
@@ -150,7 +150,7 @@
 
         <div class="row mt-5">
             <div class="col-md-9" id="looplab">
-                <img src="../img/loop-lap.jpg" alt="" class="img-fluid">
+                <img src="../img/lap-ipad.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-3 mt-1">
                 <a target="_blank" href="https://onsnip2.firebaseapp.com/">
@@ -189,7 +189,7 @@
 
         <div class="row mt-5 ">
             <div class="col-md-9">
-                <img src="../img/blogen.jpg" alt="" class="img-fluid">
+                <img src="../img/3-phones.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-3 mt-1">
                 <a target="_blank" href="https://briskmm.herokuapp.com">
@@ -205,7 +205,7 @@
                     class="btn btn-outline-info d-block mt-3"><i class="fab fa-github"></i> Source Code</a>
             </div>
         </div>
-        <div class="row mt-5 ">
+        <!-- <div class="row mt-5 ">
             <div class="col-md-9">
                 <img src="../img/mizuxes.jpg" alt="" class="img-fluid">
             </div>
@@ -223,7 +223,7 @@
                 <a target="_blank" href="https://github.com/moimigueldev/fast-type"
                     class="btn btn-outline-info d-block mt-3"><i class="fab fa-github"></i> Source Code</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
 
