--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="col-md-12">
                     <div class="input-group mt-5 " id="inverse">
-                        <div class="input-group-addon bg-dark text-white "><i class="fas fa-sun"></i> Inverse</div>
+                        <div class="input-group-addon bg-dark text-white "><i class="fas fa-sun mr-1"></i> Inverse</div>
                         <input id="toggle-one" type="checkbox" class="btn btn-dark text-white">
                     </div>
                 </div>
@@ -268,8 +268,8 @@
             <div class="col-md-9 text-center">
                 <a href="mailto:moisesmigueledu@gmail.com" class=""><strong><i class="fa fa-comments"></i>
                         Connect</strong></a>
-                <a href="https://www.instagram.com/moisemiguel16/" class="ml-4"><strong><i class="fab fa-instagram"></i>
-                        Instagram</strong></a>
+                <!-- <a href="https://www.instagram.com/moisemiguel16/" class="ml-4"><strong><i class="fab fa-instagram"></i>
+                        Instagram</strong></a> -->
                 <!-- <a href="https://www.linkedin.com/in/moisesmiguel/" class="ml-4"><strong><i class="fab fa-linkedin"></i>
                         LinkedIn</strong></a> -->
                 <a href="https://www.codewars.com/users/moiscmigu90" class="ml-4"><strong><i class="fas fa-code"></i>
